[project]
name = "t-llm"
version = "0.1.0"
description = "PyTorch implementation scaffold for T-LLM temporal distillation forecasting."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "torch>=2.1",
  "transformers>=4.40",
  "tqdm>=4.66",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["t_llm", "time_llm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
